# Observibot

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 4f736e0d610c_initial_schema.py  a1b2c3d4e5f6_add_semantic_facts.py  a7b8c9d0e1f2_add_insight_evidence.py  b2c3d4e5f6a7_add_monitor_runs.py  b8c9d0e1f2a3_semantic_facts_tsvector.py  c3d4e5f6a7b8_add_insight_feedback.py  c9d0e1f2a3b4_add_diagnostic_cooldown.py  d4e5f6a7b8c9_add_events_envelope.py  e5f6a7b8c9d0_step3_seasonal.py  f6a7b8c9d0e1_add_anomaly_signature.py
config/: observibot.example.yaml
docs/: BACKLOG.md  CONFIGURATION.md  DEPLOYMENT.md  QUICKSTART.md  README.md  TESTING_STANDARDS.md  VERIFICATION_PLAN.md  VISION.md
docs/REPORTS/: step3_2_cluster_investigation.md
docs/architecture/: ARCHITECTURE.md  CONNECTORS.md  DATA-STORE.md  LLM-INTEGRATION.md
docs/contributing/: AGENTS.md  CONNECTORS.md
docs/phases/: ROADMAP.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
scripts/: diagnose_rls.py  measure_prompt_sizes.py  seed_recurrence_test.py  setup_supabase_role.sh  tier3_diagnostic_verify.py
src/observibot/: __init__.py  cli.py  health.py
supabase/.temp/: pooler-url  project-ref
tests/: conftest.py  test_cli.py  test_health.py
tests/agent/: test_analyzer.py  test_analyzer_diagnostics.py  test_chat_agent_budgets.py  test_chat_agent_number_verify.py  test_correlation.py  test_llm_provider.py  test_multi_turn.py  (+3 more)
(+131 files in other folders)
