[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "observibot"
version = "0.1.0"
description = "Observibot — autonomous AI SRE agent for everyone on PaaS stacks."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "typer>=0.12.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "apscheduler>=3.10.0",
    "scipy>=1.14.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.0",
    "deepdiff>=7.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[project.scripts]
observibot = "observibot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/observibot"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Typer expects typer.Option(...) in defaults; B008 would flag every command.
# load_dotenv() must run before observibot.* imports touch os.environ, so the
# import order is intentionally non-standard — silence E402 here only.
"src/observibot/cli.py" = ["B008", "E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
